tests/ui/fail/missing_expr.stderr
error: Potentially invalid expansion. Expected an expression, an identifier, `::`, `break`, `for`, `if` or 7 others.
 --> tests/ui/fail/missing_expr.rs:6:17
  |
6 |         let a = ;
  |                 ^
